# worker_sheet_api

./: .codecov.yml  .dockerignore  .gitignore  BANNER.MD  Cargo.toml  Dockerfile  Jenkinsfile  LICENCE  README.MD  docker-compose.yml  integrantes.txt  jenkins-config.yml
.github/workflows/: docker-publish.yml
database/: Dockerfile
database/init/: init.sql
doc/: actix.md  diesel.md  diesel_command.md
migrations/2024-11-06-122410_create_users/: up.sql
migrations/2024-11-07-094341_workers/: down.sql  up.sql
migrations/2024-11-08-114211_activities_users/: down.sql  up.sql
scripts/: app.sh  init_system.sh  setup_api.sh  setup_database.sh  start.sh
sql/: activities.sql  activity_photos.sql  components.sql  init.sql  machinery.sql  participants.sql  users.sql
src/: db.rs  main.rs  model.rs  schema.rs  service.rs
src/activities/: mod.rs  models.rs  queries.rs  repository.rs  service.rs
src/activities/tests/: mod.rs
src/auth/: env.rs  mod.rs  models.rs  repository.rs  service.rs
src/env/: models.rs
src/handler/: model.rs
src/helper/: email_service_helper.rs  mod.rs  models.rs  response.rs  service.rs  validation_helper.rs
src/logs/: middlewares.rs  mod.rs  models.rs  repository.rs  service.rs
src/participants/: models.rs  repository.rs  service.rs
src/static/: index.html  service.rs
src/user/: mod.rs  models.rs  repository.rs  service.rs
