[package]
name = "worker_sheet_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "time", "rust_decimal"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }