[package]
name = "worker_sheet_api"
authors = ["Jhoncode<jhoancode2020@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]

# Principal libs for api
actix = "0.13.5"
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
futures = "0.3.31"
sqlx  = {version = "0.8.2", features = ["postgres", "runtime-async-std-native-tls", "uuid", "chrono"]}


# Parce Libs
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"

# General Libs
time = "0.3.36"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = {version = "0.4.38", features = ["serde"]}

# Enviroment Libs
dotenvy = "0.15.0"

# Log and depuration
log = "0.4.21"
env_logger = "0.11.3"

# Encryp
jwt = "0.16.0"
sha2 = "0.10.8"
argonautica = "0.2.0"
hmac = "0.12.1"
actix-web-httpauth = "0.8.1"
actix-cors = "0.7.0"

# Msm
lettre = "0.11.10"


#Test
actix-rt = "2.10.0"